fix scrollbar

--- a/css/gstyle.css
+++ b/css/gstyle.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  overflow-x: hidden;
 }
 .target {
   min-height: 100vh;
